--- a/views/question-bank.ejs
+++ b/views/question-bank.ejs
@@ -39,7 +39,7 @@
             <li><a class="dropdown-item" href="/prepare/system-design">System Design</a></li>
             <li><a class="dropdown-item" href="/prepare/interview-prep">Interview Prep</a></li>
           </ul>
-        </li>
+        </li>        npm install connect-mongo        npm install connect-mongo
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="mockTestDropdown" role="button" data-bs-toggle="dropdown">
             Mock Test
